add javadoc, hardcoded token and username, add gettters and setters, all fields are public