@@ -8,15 +8,19 @@ import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
-import java.util.*;
+
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Random;
 
 public class TelegramBot extends TelegramLongPollingBot {
 
     private static final Question[] data_py = WorkWithJson.readJson("question.json");
     private static final Question[] data_sharp = WorkWithJson.readJson("question_sharp.json");
     private static Map<Long, DataUser> map = new HashMap<>();
-    private static List<String> buttonsAnswerQuestion = new ArrayList<>(Arrays.asList("1", "2", "3", "4"));
-    private static List<String> buttonsChoseTheme = new ArrayList<>(Arrays.asList("Python", "C#"));
+    private static List<String> buttonsAnswerQuestion = List.of("1", "2", "3", "4");
+    private static List<String> buttonsChoseTheme = List.of("Python", "C#");
 
 
 
@@ -34,9 +38,9 @@ public class TelegramBot extends TelegramLongPollingBot {
         }
         if (update.hasCallbackQuery()) {
             chatId = update.getCallbackQuery().getMessage().getChatId();
-            if (map.get(chatId).index == -1 || update.getCallbackQuery().getData().equals("Python") ||  update.getCallbackQuery().getData()
+            if (map.get(chatId).getIndex() == -1 || update.getCallbackQuery().getData().equals("Python") ||  update.getCallbackQuery().getData()
                     .equals("C#")) {
-                map.get(chatId).currentData = WorkWithQuestions.answerOfCheckLanguage(update, data_py, data_sharp);
+                map.get(chatId).setCurrentData(WorkWithQuestions.answerOfCheckLanguage(update, data_py, data_sharp));
             }
             else {
                 try {
@@ -48,7 +52,7 @@ public class TelegramBot extends TelegramLongPollingBot {
             try {
                 Random random = new Random();
                 DataUser user = map.get(chatId);
-                user.setIndex(random.nextInt(user.currentData.length));
+                user.setIndex(random.nextInt(user.getCurrentData().length));
                 map.replace(chatId, user);
                 InlineKeyboardMarkup keyboard = Buttons.sendInlineKeyboardMessage(buttonsAnswerQuestion);
                 execute(new SendMessage().setChatId(chatId).setText(WorkWithQuestions.getQuestionWithAnswers(chatId, map)).setReplyMarkup(keyboard));
@@ -60,12 +64,12 @@ public class TelegramBot extends TelegramLongPollingBot {
 
     @Override
     public String getBotUsername() {
-        return Config.Name;
+        return Config.getTokenUsername().get("Name");
     }
 
     @Override
     public String getBotToken() {
-       return Config.Token;
+       return Config.getTokenUsername().get("Token");
     }
 
     private static SendMessage processCommand(Update update) {
